# oop_additional_tasks

./: .gitignore  pyproject.toml
lesson1/: albums.py  bottle.py  number.py
lesson2/: _date.py  _house.py  _singleton.py  bankaccount.py  person.py  rectangle.py  user.py
lesson3/: Lesson14.1.12-1.py  Lesson14.1.12-2.py  Lesson14.1.12-3.py  fraction.py  logger.py  mylist.py  point.py  timer.py
lesson4/: animal.py  car.py  shape.py
lesson5/: Lesson15.2.10-1-Star.py  Lesson15.2.10-1.py  Lesson15.2.10-2-Star.py  Lesson15.2.10-2.py  Lesson15.2.10-3.py  bird.py  person.py
lessson6/: person.py  person2.py  student.py
